-- -----------------------------
-- Extensions
-- -----------------------------
CREATE EXTENSION IF NOT EXISTS citext;
CREATE EXTENSION IF NOT EXISTS vector;
CREATE EXTENSION IF NOT EXISTS pg_trgm;
CREATE EXTENSION IF NOT EXISTS unaccent;
CREATE EXTENSION IF NOT EXISTS pgcrypto;  -- for gen_random_uuid()

-- -----------------------------
-- Utility: updated_at trigger
-- -----------------------------
CREATE OR REPLACE FUNCTION set_updated_at()
RETURNS trigger AS $$
BEGIN
  NEW.updated_at = NOW();
  RETURN NEW;
END; $$ LANGUAGE plpgsql;

-- =========================================================
-- 1) DIMENSION TABLES (Lookup Tables)
-- =========================================================

-- Case types dimension table
CREATE TABLE IF NOT EXISTS case_types (
    case_type_id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_type CITEXT UNIQUE NOT NULL,
    description TEXT,
    jurisdiction CITEXT,
    created_at TIMESTAMP NOT NULL DEFAULT NOW()
);

-- Stage types dimension table
CREATE TABLE IF NOT EXISTS stage_types (
    stage_type_id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    stage_type CITEXT UNIQUE NOT NULL,
    description TEXT,
    level INTEGER NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT NOW()
);

-- Document types dimension table
CREATE TABLE IF NOT EXISTS document_types (
    document_type_id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    document_type CITEXT UNIQUE NOT NULL,
    description TEXT,
    has_decision BOOLEAN DEFAULT FALSE,
    created_at TIMESTAMP NOT NULL DEFAULT NOW()
);

-- Enhanced courts dimension table

CREATE TABLE IF NOT EXISTS courts_dim (
  court_id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  court CITEXT UNIQUE NOT NULL,
  level CITEXT,               -- e.g., "Supreme Court", "Court of Appeals"
  jurisdiction CITEXT,        -- e.g., "WA", "US"
  district CITEXT,
  county CITEXT
);

CREATE TABLE IF NOT EXISTS statutes_dim (
  statute_id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  jurisdiction CITEXT,        -- "US", "WA", etc.
  code CITEXT,                -- "USC", "RCW", etc.
  title CITEXT,               -- e.g., "10 U.S.C."
  section CITEXT,             -- e.g., "§ 1408"
  subsection CITEXT,          -- e.g., "(a)(4)(A)(iii)"
  display_text CITEXT         -- "10 U.S.C. § 1408(a)(4)(A)(iii)"
);
CREATE UNIQUE INDEX IF NOT EXISTS uq_statute_parts 
ON statutes_dim (jurisdiction, code, title, section, COALESCE(subsection,''));

-- =========================================================
-- 2) YOUR EXISTING TABLES (refined)
-- =========================================================

-- Cases: enhanced with normalized foreign keys and business identifier
CREATE TABLE IF NOT EXISTS cases (
    case_id           BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_file_id      CITEXT,           -- Legal case number from document (e.g., "73404-1")
    title             CITEXT NOT NULL,
    court_level       CITEXT,
    court             CITEXT,           -- consider FK to courts_dim.name if you want tight normalization
    district          CITEXT,
    county            CITEXT,
    docket_number     CITEXT,
    source_docket_number CITEXT,
    trial_judge       CITEXT,

    -- Trial court dates
    trial_start_date     DATE,           -- When the divorce case began
    trial_end_date       DATE,           -- When trial court made its decision
    trial_published_date DATE,           -- When trial court decision was published
    
    -- Appellate court dates  
    appeal_start_date    DATE,           -- When someone appealed the trial decision
    appeal_end_date      DATE,           -- When appellate court made final decision
    appeal_published_date DATE,          -- When appellate court decision was published
    
    -- Additional court dates
    oral_argument_date   DATE,           -- When oral arguments were presented
    published         BOOLEAN,          -- true/false instead of CITEXT

    summary           TEXT,
    full_text         TEXT,             -- keep raw; consider storing in object storage & keep URI here
    full_embedding    VECTOR(1024),     -- keep if you want doc-level embedding

    -- Overall case outcome
    overall_case_outcome CITEXT,           -- "affirmed", "reversed", "remanded_full", "remanded_partial", "dismissed", "split", "partial", "other"
    
    -- Enhanced type classification  
    case_type_id        BIGINT REFERENCES case_types(case_type_id) ON DELETE SET NULL,
    stage_type_id       BIGINT REFERENCES stage_types(stage_type_id) ON DELETE SET NULL,
    court_id            BIGINT REFERENCES courts_dim(court_id) ON DELETE SET NULL,
    parent_case_id      BIGINT REFERENCES cases(case_id) ON DELETE SET NULL,
    
    -- Legacy case type field (for compatibility)
    case_type           CITEXT DEFAULT 'divorce',  -- "divorce", "marriage", "criminal", "civil", "family", "business", etc.
    
    -- Legacy winner data (kept for compatibility)
    winner_legal_role   CITEXT,
    winner_personal_role CITEXT,
    appeal_outcome       CITEXT,

    -- Source file information for traceability
    source_file         CITEXT,         -- original PDF filename
    source_file_path    TEXT,           -- full path to source PDF file
    source_url          TEXT DEFAULT NULL,  -- original URL or link to the case (court website, legal database, etc.)
    extraction_timestamp TIMESTAMP,     -- when this case was extracted

    -- Metadata
    created_at TIMESTAMP NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE TRIGGER trg_cases_updated BEFORE UPDATE ON cases
FOR EACH ROW EXECUTE FUNCTION set_updated_at();

-- Documents: document lifecycle management
CREATE TABLE IF NOT EXISTS documents (
    document_id          BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id              BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    stage_type_id        BIGINT NOT NULL REFERENCES stage_types(stage_type_id) ON DELETE RESTRICT,
    document_type_id     BIGINT NOT NULL REFERENCES document_types(document_type_id) ON DELETE RESTRICT,
    title                TEXT,
    source_url           TEXT,
    local_path           TEXT,
    file_size            BIGINT,
    page_count           INTEGER,
    processing_status    CITEXT DEFAULT 'pending',
    created_at           TIMESTAMP NOT NULL DEFAULT NOW(),
    updated_at           TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE TRIGGER trg_documents_updated BEFORE UPDATE ON documents
FOR EACH ROW EXECUTE FUNCTION set_updated_at();
CREATE INDEX IF NOT EXISTS idx_documents_case_id ON documents(case_id);

-- Issues and Decisions merged (Washington State divorce appeals categorization)
CREATE TABLE IF NOT EXISTS issues_decisions (
    issue_id           BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id            BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    
    -- Washington State divorce appeals hierarchy (from ChatGPT conversation)
    category           CITEXT NOT NULL,    -- Top-level: "Spousal Support / Maintenance", "Child Support", etc.
    subcategory        CITEXT NOT NULL,    -- Mid-level: "Duration (temp vs. permanent)", "Income determination", etc.
    rcw_reference      CITEXT,             -- Washington RCW statutes: "RCW 26.09.090", "RCW 26.19.071", etc.
    keywords           CITEXT[],           -- Common keywords: ["rehabilitative maintenance", "indefinite award"]
    
    -- Issue details
    issue_summary      TEXT NOT NULL,      -- Specific issue description from case
    
    -- Decision details
    decision_stage     CITEXT,             -- "trial", "appeal"
    decision_summary   TEXT,               -- What the court decided on this issue
    appeal_outcome     CITEXT,             -- "reversed", "affirmed", "remanded", "dismissed", "partial"
    winner_legal_role  CITEXT,             -- "appellant", "respondent", etc.
    winner_personal_role CITEXT,           -- "husband", "wife", etc.
    
    -- AI metadata
    confidence_score   REAL,
    
    created_at TIMESTAMP NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE TRIGGER trg_issues_decisions_updated BEFORE UPDATE ON issues_decisions
FOR EACH ROW EXECUTE FUNCTION set_updated_at();
CREATE INDEX IF NOT EXISTS idx_issues_decisions_case_id ON issues_decisions(case_id);

-- Arguments (multiple per issue)
CREATE TABLE IF NOT EXISTS arguments (
    argument_id        BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id            BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    issue_id           BIGINT NOT NULL REFERENCES issues_decisions(issue_id) ON DELETE CASCADE,
    
    -- AI-generated argument content
    side               CITEXT NOT NULL,        -- "Appellant", "Respondent", "Court"
    argument_text      TEXT NOT NULL,          -- The actual argument text
    
    created_at TIMESTAMP NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE TRIGGER trg_arguments_updated BEFORE UPDATE ON arguments
FOR EACH ROW EXECUTE FUNCTION set_updated_at();
CREATE INDEX IF NOT EXISTS idx_arguments_case_id ON arguments(case_id);

-- Parties
CREATE TABLE IF NOT EXISTS parties (
    party_id   BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id    BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    name       CITEXT NOT NULL,
    legal_role CITEXT,          -- "Appellant", "Respondent"...
    personal_role CITEXT,       -- "Husband", "Wife", etc.
    party_type CITEXT,          -- "Individual", "Organization"
    created_at TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE INDEX IF NOT EXISTS idx_parties_case_id ON parties(case_id);

-- Attorneys
CREATE TABLE IF NOT EXISTS attorneys (
    attorney_id   BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id       BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    name          CITEXT NOT NULL,
    firm_name     CITEXT,
    firm_address  TEXT,
    representing  CITEXT,       -- party_id or name
    attorney_type CITEXT,       -- "Appellant Counsel", etc.
    created_at    TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE INDEX IF NOT EXISTS idx_attorneys_case_id ON attorneys(case_id);


-- Judges (normalize vs appeals_judges)
CREATE TABLE IF NOT EXISTS judges (
    judge_id   BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name       CITEXT UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS case_judges (
    id         BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id    BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    judge_id   BIGINT NOT NULL REFERENCES judges(judge_id) ON DELETE CASCADE,
    role       CITEXT,       -- "Author", "Concurring", "Dissenting", "Panelist"
    court      CITEXT,
    created_at TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE UNIQUE INDEX IF NOT EXISTS uq_case_judge_role ON case_judges (case_id, judge_id, role);
CREATE INDEX IF NOT EXISTS idx_case_judges_case_id ON case_judges(case_id);

-- Replaces/extends your "appeals_judges" with a normalized mapping

-- Precedents (convert to graph-like edges)
CREATE TABLE IF NOT EXISTS citation_edges (
    citation_id  BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    source_case_id BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    target_case_citation CITEXT NOT NULL,     -- raw text "490 U.S. 581"
    target_case_id BIGINT ,  -- filled if you can resolve
    relationship CITEXT,                       -- "cites", "distinguishes", "overrules", etc.
    importance   CITEXT,                       -- "key", "support", etc.
    pin_cite     CITEXT,                       -- "at 589-590"
    created_at   TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE UNIQUE INDEX IF NOT EXISTS uq_citation_edge 
ON citation_edges (source_case_id, target_case_citation, COALESCE(pin_cite,''));
CREATE INDEX IF NOT EXISTS idx_citation_edges_source ON citation_edges(source_case_id);
CREATE INDEX IF NOT EXISTS idx_citation_edges_case_id ON citation_edges(source_case_id);
CREATE INDEX IF NOT EXISTS idx_citation_edges_target_citation_gin ON citation_edges USING GIN (target_case_citation gin_trgm_ops);

-- Statute citations (normalized linking to statutes_dim)
CREATE TABLE IF NOT EXISTS statute_citations (
  id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  case_id BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
  statute_id BIGINT REFERENCES statutes_dim(statute_id) ON DELETE SET NULL,
  raw_text TEXT,
  created_at TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE INDEX IF NOT EXISTS idx_statute_citations_case_id ON statute_citations(case_id);

-- =========================================================
-- 3) RETRIEVAL LAYER YOU NEED (chunks, words, phrases)
-- =========================================================

-- Case chunks (paragraph/sentence units)
CREATE TABLE IF NOT EXISTS case_chunks (
    chunk_id   BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id    BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    document_id BIGINT REFERENCES documents(document_id) ON DELETE SET NULL,
    
    -- Chunk organization
    chunk_order INT NOT NULL,                    -- 1..N
    section     CITEXT,                          -- e.g., "FACTS", "ANALYSIS-A", "SBP", "MAINTENANCE"
    text        TEXT NOT NULL,
    
    -- No chunk-level embeddings (not suitable for search)
    
    -- Statistics
    sentence_count INTEGER DEFAULT 0,
    
    -- Full-text search
    -- optional full-text tsvector for lexical FTS
    tsv tsvector GENERATED ALWAYS AS (
      to_tsvector('english', coalesce(text,''))
    ) STORED,
    created_at  TIMESTAMP NOT NULL DEFAULT NOW(),
    updated_at  TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE UNIQUE INDEX IF NOT EXISTS uq_case_chunk_order ON case_chunks (case_id, chunk_order);
CREATE TRIGGER trg_case_chunks_updated BEFORE UPDATE ON case_chunks
FOR EACH ROW EXECUTE FUNCTION set_updated_at();

-- Indexes for chunks
CREATE INDEX IF NOT EXISTS idx_case_chunks_case_order ON case_chunks(case_id, chunk_order);
CREATE INDEX IF NOT EXISTS idx_case_chunks_case_id ON case_chunks(case_id);
-- GIN FTS index
CREATE INDEX IF NOT EXISTS idx_case_chunks_tsv ON case_chunks USING GIN (tsv);

-- Case sentences (sentence-level text processing)
CREATE TABLE IF NOT EXISTS case_sentences (
    sentence_id          BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id              BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    chunk_id             BIGINT NOT NULL REFERENCES case_chunks(chunk_id) ON DELETE CASCADE,
    document_id          BIGINT REFERENCES documents(document_id) ON DELETE SET NULL,
    
    -- Sentence organization
    sentence_order       INTEGER NOT NULL,       -- Order within chunk
    global_sentence_order INTEGER NOT NULL,      -- Order within entire case
    text                 TEXT NOT NULL,
    
    -- No sentence-level embeddings (too expensive, disabled)
    
    -- Statistics
    word_count           INTEGER DEFAULT 0,
    
    -- Full-text search
    tsv                  TSVECTOR GENERATED ALWAYS AS (
        to_tsvector('english', coalesce(text,''))
    ) STORED,
    
    created_at           TIMESTAMP NOT NULL DEFAULT NOW(),
    updated_at           TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE TRIGGER trg_case_sentences_updated BEFORE UPDATE ON case_sentences
FOR EACH ROW EXECUTE FUNCTION set_updated_at();

-- Indexes for sentences
CREATE UNIQUE INDEX IF NOT EXISTS uq_case_sentence_order ON case_sentences (case_id, chunk_id, sentence_order);
CREATE INDEX IF NOT EXISTS idx_case_sentences_case_id ON case_sentences(case_id);
CREATE INDEX IF NOT EXISTS idx_case_sentences_chunk_id ON case_sentences(chunk_id);
CREATE INDEX IF NOT EXISTS idx_case_sentences_global_order ON case_sentences(case_id, global_sentence_order);
-- GIN FTS index
CREATE INDEX IF NOT EXISTS idx_case_sentences_tsv ON case_sentences USING GIN (tsv);

-- Word dictionary (unique lexemes)
CREATE TABLE IF NOT EXISTS word_dictionary (
    word_id SERIAL PRIMARY KEY,
    word CITEXT UNIQUE NOT NULL,
    lemma CITEXT,
    -- small stats can help planning
    df INT DEFAULT 0  -- document frequency (#cases)
);
CREATE INDEX IF NOT EXISTS idx_word_dictionary_trgm ON word_dictionary USING GIN (word gin_trgm_ops);

-- Word occurrences (one row per token position for precise phrase queries)
CREATE TABLE IF NOT EXISTS word_occurrence (
    word_id INT NOT NULL REFERENCES word_dictionary(word_id) ON DELETE CASCADE,
    case_id BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    chunk_id BIGINT NOT NULL REFERENCES case_chunks(chunk_id) ON DELETE CASCADE,
    sentence_id BIGINT NOT NULL REFERENCES case_sentences(sentence_id) ON DELETE CASCADE,
    document_id BIGINT REFERENCES documents(document_id) ON DELETE SET NULL,
    position INT NOT NULL,           -- token index within sentence (0-based or 1-based)
    PRIMARY KEY (word_id, sentence_id, position)
);
-- Helpful composite indexes
CREATE INDEX IF NOT EXISTS idx_word_occurrence_word_case ON word_occurrence(word_id, case_id);
CREATE INDEX IF NOT EXISTS idx_word_occurrence_case_id ON word_occurrence(case_id);
CREATE INDEX IF NOT EXISTS idx_word_occurrence_chunk_pos ON word_occurrence(chunk_id, position);

-- (Optional) Case phrases (n-grams) for analytics/autocomplete
CREATE TABLE IF NOT EXISTS case_phrases (
    phrase_id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id   BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    document_id BIGINT REFERENCES documents(document_id) ON DELETE SET NULL,
    
    -- N-gram phrase data
    phrase    CITEXT NOT NULL,
    n         SMALLINT NOT NULL CHECK (n IN (2,3,4)),   -- bigram/trigram/4-gram
    frequency INT NOT NULL,
    
    -- Example references
    example_sentence BIGINT REFERENCES case_sentences(sentence_id) ON DELETE SET NULL,
    example_chunk BIGINT REFERENCES case_chunks(chunk_id) ON DELETE SET NULL,
    
    created_at TIMESTAMP NOT NULL DEFAULT NOW()
);
CREATE UNIQUE INDEX IF NOT EXISTS uq_case_phrase ON case_phrases (case_id, phrase);
CREATE INDEX IF NOT EXISTS idx_case_phrases_case_id ON case_phrases(case_id);
CREATE INDEX IF NOT EXISTS idx_case_phrases_phrase_trgm ON case_phrases USING GIN (phrase gin_trgm_ops);

-- (Optional) Anchors: link issues/decisions to specific chunks (explainability)
CREATE TABLE IF NOT EXISTS issue_chunks (
  id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
  issue_id BIGINT NOT NULL REFERENCES issues_decisions(issue_id) ON DELETE CASCADE,
  case_id BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
  chunk_id BIGINT NOT NULL REFERENCES case_chunks(chunk_id) ON DELETE CASCADE,
  evidence_score REAL              -- 0..1 confidence
);
CREATE UNIQUE INDEX IF NOT EXISTS uq_issue_chunk ON issue_chunks (issue_id, chunk_id);



-- Global embeddings table for all chunk embeddings across all cases
CREATE TABLE IF NOT EXISTS embeddings (
    embedding_id    BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    case_id         BIGINT NOT NULL REFERENCES cases(case_id) ON DELETE CASCADE,
    chunk_id        BIGINT NOT NULL REFERENCES case_chunks(chunk_id) ON DELETE CASCADE,
    document_id     BIGINT REFERENCES documents(document_id) ON DELETE SET NULL,
    
    -- Embedding data
    text            TEXT NOT NULL,                   -- The chunk text
    embedding       VECTOR(1024) NOT NULL,           -- The chunk embedding
    chunk_order     INTEGER NOT NULL,                -- Order within case
    section         CITEXT,                          -- Section type
    
    -- Metadata
    created_at      TIMESTAMP NOT NULL DEFAULT NOW(),
    updated_at      TIMESTAMP NOT NULL DEFAULT NOW()
);

-- Indexes for global embeddings table
CREATE INDEX IF NOT EXISTS idx_embeddings_case_id ON embeddings(case_id);
CREATE INDEX IF NOT EXISTS idx_embeddings_chunk_id ON embeddings(chunk_id);
CREATE INDEX IF NOT EXISTS idx_embeddings_order ON embeddings(case_id, chunk_order);

-- pgvector HNSW index for cosine similarity search
CREATE INDEX IF NOT EXISTS idx_embeddings_hnsw 
  ON embeddings USING hnsw (embedding vector_cosine_ops);

-- GIN FTS index for text search
CREATE INDEX IF NOT EXISTS idx_embeddings_tsv ON embeddings USING GIN (to_tsvector('english', text));

-- Trigger for updated_at
CREATE TRIGGER trg_embeddings_updated BEFORE UPDATE ON embeddings
FOR EACH ROW EXECUTE FUNCTION set_updated_at();

-- =========================================================
-- 4) MATERIALIZED VIEWS / HELPERS
-- =========================================================

-- Top phrases per jurisdiction or court (refresh as needed)
CREATE MATERIALIZED VIEW IF NOT EXISTS mv_top_phrases AS
SELECT
  c.court,
  p.phrase,
  SUM(p.frequency) AS total_freq,
  COUNT(DISTINCT p.case_id) AS cases_covered
FROM case_phrases p
JOIN cases c ON c.case_id = p.case_id
GROUP BY 1,2
ORDER BY total_freq DESC;

-- Grant permissions to user
GRANT ALL PRIVILEGES ON DATABASE "cases_llama3.3" TO legal_user;
GRANT USAGE ON SCHEMA public TO legal_user;
GRANT CREATE ON SCHEMA public TO legal_user;
GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public TO legal_user;
GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA public TO legal_user;