// Law Helper Database Schema
// Generated for dbdiagram.io visualization
// Complete schema with all tables and relationships

// =========================================================
// DIMENSION TABLES (Lookup Tables)
// =========================================================

Table case_types {
  case_type_id bigint [pk, increment]
  case_type citext [unique, not null]
  description text
  jurisdiction citext
  created_at timestamp [not null, default: `now()`]
}

Table stage_types {
  stage_type_id bigint [pk, increment]
  stage_type citext [unique, not null]
  description text
  level integer [not null]
  created_at timestamp [not null, default: `now()`]
}

Table document_types {
  document_type_id bigint [pk, increment]
  document_type citext [unique, not null]
  description text
  has_decision boolean [default: false]
  created_at timestamp [not null, default: `now()`]
}

Table courts_dim {
  court_id bigint [pk, increment]
  court citext [unique, not null]
  level citext
  jurisdiction citext
  district citext
  county citext
}

Table statutes_dim {
  statute_id bigint [pk, increment]
  jurisdiction citext
  code citext
  title citext
  section citext
  subsection citext
  display_text citext
}

// =========================================================
// CORE TABLES
// =========================================================

Table cases {
  case_id bigint [pk, increment]
  case_file_id citext [note: 'Legal case number from document (e.g., "73404-1")']
  title citext [not null]
  court_level citext
  court citext
  district citext
  county citext
  docket_number citext
  source_docket_number citext
  trial_judge citext
  
  // Trial court dates
  trial_start_date date
  trial_end_date date
  trial_published_date date
  
  // Appellate court dates
  appeal_start_date date
  appeal_end_date date
  appeal_published_date date
  
  // Additional court dates
  oral_argument_date date
  published boolean
  
  // AI-generated content
  summary text
  full_text text
  full_embedding vector(1024)
  
  // Case outcome
  overall_case_outcome citext
  
  // Enhanced type classification  
  case_type_id bigint [ref: > case_types.case_type_id]
  stage_type_id bigint [ref: > stage_types.stage_type_id]
  court_id bigint [ref: > courts_dim.court_id]
  parent_case_id bigint [ref: > cases.case_id]
  
  // Legacy case type field (for compatibility)
  case_type citext [default: 'divorce']
  
  // Legacy winner data
  winner_legal_role citext
  winner_personal_role citext
  appeal_outcome citext
  
  // Source file information
  source_file citext
  source_file_path text
  source_url text
  extraction_timestamp timestamp
  
  // Metadata
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table documents {
  document_id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  stage_type_id bigint [not null, ref: > stage_types.stage_type_id]
  document_type_id bigint [not null, ref: > document_types.document_type_id]
  title text
  source_url text
  local_path text
  file_size bigint
  page_count integer
  processing_status citext [default: 'pending']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// =========================================================
// AI-GENERATED LEGAL ANALYSIS
// =========================================================

Table issues_decisions {
  issue_id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  
  // Document references
  document_id bigint [ref: > documents.document_id]
  document_type_id bigint [ref: > document_types.document_type_id]
  
  // AI-generated legal analysis
  category citext [not null]
  subcategory citext [not null]
  rcw_reference citext
  keywords citext[]
  issue_summary text [not null]
  
  // Decision details
  decision_stage citext
  decision_summary text
  appeal_outcome citext
  winner_legal_role citext
  winner_personal_role citext
  
  // AI confidence
  confidence_score real
  
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table arguments {
  argument_id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  issue_id bigint [not null, ref: > issues_decisions.issue_id]
  
  // Document references
  document_id bigint [ref: > documents.document_id]
  document_type_id bigint [ref: > document_types.document_type_id]
  
  // AI-generated argument content
  side citext [not null]
  argument_text text [not null]
  
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// =========================================================
// AI-GENERATED ENTITY EXTRACTION
// =========================================================

Table parties {
  party_id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  
  // AI-extracted party information
  name citext [not null]
  legal_role citext
  personal_role citext
  party_type citext
  
  created_at timestamp [not null, default: `now()`]
}

Table attorneys {
  attorney_id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  
  // AI-extracted attorney information
  name citext [not null]
  firm_name citext
  firm_address text
  representing citext
  attorney_type citext
  
  created_at timestamp [not null, default: `now()`]
}

Table judges {
  judge_id bigint [pk, increment]
  name citext [unique, not null]
}

Table case_judges {
  id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  judge_id bigint [not null, ref: > judges.judge_id]
  role citext
  court citext
  created_at timestamp [not null, default: `now()`]
}

// =========================================================
// AI-GENERATED CITATION ANALYSIS
// =========================================================

Table citation_edges {
  citation_id bigint [pk, increment]
  source_case_id bigint [not null, ref: > cases.case_id]
  
  // AI-extracted citation information
  target_case_citation citext [not null]
  target_case_id bigint
  relationship citext
  importance citext
  pin_cite citext
  
  created_at timestamp [not null, default: `now()`]
}

Table statute_citations {
  id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  statute_id bigint [ref: > statutes_dim.statute_id]
  
  // AI-extracted statute reference
  raw_text text
  
  created_at timestamp [not null, default: `now()`]
}

// =========================================================
// TEXT PROCESSING HIERARCHY
// =========================================================

Table case_chunks {
  chunk_id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  document_id bigint [ref: > documents.document_id]
  
  // Chunk organization
  chunk_order integer [not null]
  section citext
  text text [not null]
  
  // AI-generated embeddings
  embedding vector(1024)
  
  // Statistics
  sentence_count integer [default: 0]
  
  // Full-text search
  tsv tsvector
  
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table case_sentences {
  sentence_id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  chunk_id bigint [not null, ref: > case_chunks.chunk_id]
  document_id bigint [ref: > documents.document_id]
  
  // Sentence organization
  sentence_order integer [not null]
  global_sentence_order integer [not null]
  text text [not null]
  
  // AI-generated embeddings
  embedding vector(1024)
  
  // Statistics
  word_count integer [default: 0]
  
  // Full-text search
  tsv tsvector
  
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table word_dictionary {
  word_id serial [pk]
  word citext [unique, not null]
  lemma citext
  df integer [default: 0]
}

Table word_occurrence {
  word_id integer [not null, ref: > word_dictionary.word_id]
  case_id bigint [not null, ref: > cases.case_id]
  chunk_id bigint [not null, ref: > case_chunks.chunk_id]
  sentence_id bigint [not null, ref: > case_sentences.sentence_id]
  document_id bigint [ref: > documents.document_id]
  position integer [not null]
  
  // Composite primary key
  indexes {
    (word_id, sentence_id, position) [pk]
  }
}

Table case_phrases {
  phrase_id bigint [pk, increment]
  case_id bigint [not null, ref: > cases.case_id]
  document_id bigint [ref: > documents.document_id]
  
  // N-gram phrase data
  phrase citext [not null]
  n smallint [not null, note: '2, 3, or 4']
  frequency integer [not null]
  
  // Example references
  example_sentence bigint [ref: > case_sentences.sentence_id]
  example_chunk bigint [ref: > case_chunks.chunk_id]
  
  created_at timestamp [not null, default: `now()`]
}

// =========================================================
// ANCHOR TABLES (EXPLAINABILITY)
// =========================================================

Table issue_chunks {
  id bigint [pk, increment]
  issue_id bigint [not null, ref: > issues_decisions.issue_id]
  case_id bigint [not null, ref: > cases.case_id]
  chunk_id bigint [not null, ref: > case_chunks.chunk_id]
  evidence_score real
}

// =========================================================
// MATERIALIZED VIEWS
// =========================================================

Table mv_top_phrases {
  court citext
  phrase citext
  total_freq bigint
  cases_covered bigint
  
  Note: 'Materialized view for top phrases per court'
}

// =========================================================
// TABLE GROUPS (for better visualization)
// =========================================================

TableGroup "Dimension Tables" {
  case_types
  stage_types
  document_types
  courts_dim
  statutes_dim
}

TableGroup "Core Case Management" {
  cases
  documents
}

TableGroup "AI Legal Analysis" {
  issues_decisions
  arguments
}

TableGroup "AI Entity Extraction" {
  parties
  attorneys
  judges
  case_judges
}

TableGroup "AI Citation Analysis" {
  citation_edges
  statute_citations
}

TableGroup "Text Processing" {
  case_chunks
  case_sentences
  word_dictionary
  word_occurrence
  case_phrases
}

TableGroup "Explainability" {
  issue_chunks
}

TableGroup "Analytics" {
  mv_top_phrases
}
